--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
       const dataUrl = canvas.toDataURL('image/png');
       const a = document.createElement('a');
       a.href = dataUrl;
-      a.download = 'qrcode-1000.png';
+      a.download = 'qr.png';
       document.body.appendChild(a);
       a.click();
       a.remove();
@@ -145,3 +145,4 @@
   </script>
 </body>
 </html>
+
